# libvplan-rs

./: .travis.yml  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
examples/: vplan.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/futures/future/: trait.Future.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
libvplan/: all.html  index.html  sidebar-items.js
libvplan/client/: index.html  sidebar-items.js  struct.Client.html  struct.ResponseFuture.html
libvplan/error/: enum.ParsingError.html  enum.RequestError.html  index.html  sidebar-items.js
libvplan/parser/: fn.parse.html  index.html  sidebar-items.js
libvplan/vplan/: enum.WeekType.html  index.html  struct.Change.html  struct.Vplan.html  struct.VplanDate.html
src/: client.rs  document.rs  error.rs  lib.rs  vplan.rs
src/libvplan/: client.rs.html  document.rs.html  error.rs.html  lib.rs.html  vplan.rs.html
src/libvplan/parser/: changed.rs.html  common.rs.html  day_off.rs.html  mod.rs.html  vplan_date.rs.html
src/parser/: changed.rs  common.rs  day_off.rs  mod.rs  vplan_date.rs
tests/: client.rs  parser.rs
