[package]
name = "libvplan"
version = "0.1.0"
description = "A client and parser for indiware timetable changes."
license = "CC0-1.0"
authors = ["Jan Baudisch (flyingP0tat0) <dev@baudisch.xyz>"]
edition = "2018"

[features]
default = ["client"]

client = ["base64", "futures", "http", "hyper", "hyper-tls"]

vendored = ["hyper-tls/vendored"]

[dependencies]
base64 = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
futures = { version = "0.1", optional = true }
http = { version = "0.1", optional = true }
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3", optional = true }
nom = "4.1"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git", rev = "551c78d" }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.2"
tokio = "0.1"
